fixed animation flicker

--- a/docs/scss/main.scss
+++ b/docs/scss/main.scss
@@ -142,6 +142,13 @@ p.text-content{
   margin-bottom: 6rem;
 }
 
+.hidden-load{
+  opacity: 0;
+  .hidden-load.animated{
+    opacity: 1;
+  }
+}
+
 @media screen and (min-width: 1200px) and (max-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
   $nav-link-padding-x: 3rem;
   nav.navbar{
